# baxter_demo_ui

./: CHANGELOG.rst  CMakeLists.txt  README.md  README.rst  package.xml  setup.py
scripts/: demo_mode.py  demo_ui.py
share/: config.json
src/baxter_demo_ui/: .img_proc.py.swp  __init__.py  baxter_procs.py  demo_buttons.py  demo_functions.py  demo_ui.py  demo_windows.py  img_proc.py
